# brick-breaker-opengl

./: CMakeLists.txt  README.md  main.cpp
lib/: ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  glad.c  glad.h  particle.cpp  particle.h  post_processor.cpp  post_processor.h  resourceman.cpp  resourceman.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
shaders/: particle.frag  particle.vs  quad.frag  quad.vs  sprite.frag  sprite.vs
